# arqgen-validation-system

./: Cargo.toml  README.md  dados.csv  dados.json  dados.parquet  dados.xml
src/: lib.rs  main.rs
src/business_logic/: mod.rs  validator.rs
src/business_logic/regras/: cidades.rs  construtoras.rs  factory.rs  ignoradas.rs  mod.rs  padrao.rs
src/file_generator/: csv_generator.rs  json_generator.rs  mod.rs  parquet_generator.rs  xml_generator.rs
src/file_reader/: csv_reader.rs  json_reader.rs  mod.rs  parquet_reader.rs  xml_reader.rs
src/models/: empreendimento.rs  field_converter.rs  mod.rs
tests/: business_logic_integration.rs  integration_tests.rs  regras_negocio_tests.rs  validacao_integracao_tests.rs
tests/common/: mod.rs
